# Comet-lang

./: README.md  meson.build
src/linux/: CMakeLists.txt  main.c  meson.build
src/linux/compiler/: comet.c  comet.h
src/linux/lexer/: token.c  token.h
src/linux/parser/: scanner.c  scanner.h
src/linux/util/: hashmap.c  hashmap.h  hashmap_base.h  string_util.c  string_util.h  vector.c  vector.h
src/win/: meson.build
src/win/compiler/: comet.c
src/win/lexer/: token.h
src/win/parser/: scanner.c  scanner.h
src/win/util/: vector.c
